tests/expectations/compiler/futures/future_not_all_awaited_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372093]: The following futures were never awaited: f4
    --> compiler-test:12:5
     |
  12 |     async function finalize_foo(f0: Future, f1: Future, f2: Future, f3: Future, f4: Future, f5: Future) {
  13 |         f1.await();
  14 |         f2.await();
  15 |         f3.await();
  16 |         f0.await();
  17 |         f5.await();
  18 |     }
     |     ^
     |
     = Ex: for `f: Future` call `f.await()` to await a future.
"""]
